# weaver

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: calibrate_robot.sh  convert_to_lerobot.sh  download_assets.sh  isaaclab2lerobot.py  launch_teleop_ros2.sh  record_demo.sh  replay_demo.sh  run_policy_inference.sh  run_policy_server.sh  setup_ros2_jazzy.sh  setup_weaver.sh  test_teleoperate.sh  train_ACT.ipynb  upload_dataset.sh  visualize_lerobot_dataset.sh
