[project]
name = "weaver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "isaaclab",
    "isaaclab-assets",
    "isaaclab-mimic",
    "isaaclab-rl[all]",
    "isaaclab-tasks",
    "isaacsim[all,extscache]==5.1.0",
    "leisaac",
    "lerobot",
]

[tool.uv]
override-dependencies = [
    "pywin32; sys_platform == 'win32'"
]

[[tool.uv.index]]
url = "file:///home/jlamperez/Workspace/weaver/nvidia"

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true

[tool.uv.sources]
isaaclab = { path = "IsaacLab/source/isaaclab", editable = true }
isaaclab-assets = { path = "IsaacLab/source/isaaclab_assets", editable = true }
isaaclab-rl = { path = "IsaacLab/source/isaaclab_rl", editable = true }
isaaclab-tasks = { path = "IsaacLab/source/isaaclab_tasks", editable = true }
isaaclab-mimic = { path = "IsaacLab/source/isaaclab_mimic", editable = true }
lerobot = { path = "lerobot", editable = true }
leisaac = { path = "leisaac/source/leisaac", editable = true }
